--- a/assets/css/styles.styl
+++ b/assets/css/styles.styl
@@ -87,6 +87,7 @@ button
   padding 24px 24px 32px 24px
   background-image black-gradient
   border-radius card-radius-sm
+  text-align center
 
 .circle-container
   width 42px
@@ -126,6 +127,20 @@ button
   &:hover
     color primary-orange
     background-color white
+
+// thank you state styles
+.illustration > svg
+  margin-top 10px
+  margin-left auto
+  margin-right auto
+
+.pill
+  margin 24px 48px
+  padding 7px 0 3px 0
+  border-radius pill-radius
+  text-align center
+  background-color dark-blue
+  color primary-orange
 
 // footer styles
 footer
