Implement rating choice event and rating submission

--- a/assets/css/styles.styl
+++ b/assets/css/styles.styl
@@ -165,6 +165,6 @@ footer
   display none
 
 // css class to apply styles to selected rating options
-.isSelected
+#isSelected
   background-color mid-gray
   color white
