Center rating card on screen

--- a/assets/css/styles.styl
+++ b/assets/css/styles.styl
@@ -61,6 +61,13 @@ button
 body
   background-color darkest-blue
 
+main
+  height 100%
+  padding-bottom 2.5rem
+  display flex
+  justify-content center
+  align-items center
+
 // card styles
 p
 h2
@@ -84,6 +91,7 @@ button
 
 .card
   width 327px
+  height fit-content
   padding 24px 24px 32px 24px
   background-image black-gradient
   border-radius card-radius-sm
