--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,6 +31,13 @@ button,
 body {
   background-color: #121417;
 }
+main {
+  height: 100%;
+  padding-bottom: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 p,
 h2,
 button {
@@ -53,6 +60,7 @@ button {
 }
 .card {
   width: 327px;
+  height: fit-content;
   padding: 24px 24px 32px 24px;
   background-image: radial-gradient(98.96% 98.96% at 50% 0%, #232a34 0%, #171d26 100%);
   border-radius: 15px;
