--- a/assets/css/styles.styl
+++ b/assets/css/styles.styl
@@ -125,6 +125,12 @@ button
     background-color primary-orange
     color white
 
+#submit-error
+  margin-top 7px
+  font-size xs-text
+  line-height lh-22
+  color lightest-gray
+
 #submit-rating
   width 100%
   padding 12px 0
