--- a/assets/css/styles.styl
+++ b/assets/css/styles.styl
@@ -181,7 +181,7 @@ footer
   display none
 
 // css class to apply styles to selected rating options
-#isSelected
+.isSelected
   background-color mid-gray
   color white
 
